--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "myreact",
   "version": "1.0.0",
   "description": "my react app",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -18,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/SaineeNihar/NamasteReact/issues"
   },
-  "homepage": "https://github.com/SaineeNihar/NamasteReact#readme"
+  "homepage": "https://github.com/SaineeNihar/NamasteReact#readme",
+  "devDependencies": {
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
